Thu Apr 30 23:13:31 1998  George Lebl  <jirka@5z.com>

	* gnome-calculator.[ch]: added an accelerator table and
	  accelerators since too many people complained about it.
	  it doesn't work for the numpad which is kind of weird

Thu Apr 30 21:31:43 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-client.c (client_set_prop_from_string): Don't include
	trailing \0 in length.
	(client_set_prop_from_array): Likewise.

Thu Apr 30 23:25:19 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.h (struct _GnomeDialog): New member, 
	GtkAcceleratorTable * accelerators
	* gnome-dialog.h (gnome_dialog_set_accelerator): New function, EZ
 	way to connect an accelerator to a button.
	* gnome-dialog.h (gnome_dialog_close): New function. Emits
	delete_event, hides then destroys only if delete_event isn't
	handled.
	* gnome-propertybox.c (just_close): Use gnome_dialog_close.
	* gnome-dialog.c: Use gnome-uidefs rather than custom
	button/border sizes. Implement new gnome-dialog.h interfaces.
	* gnome-dialog.c (gnome_dialog_key_pressed): New function, 
	gnome_dialog_close if GDK_Escape is pressed, otherwise
	call parent's key_press_event handler.
	* gnome-dialog.c (gnome_dialog_class_init):
	widget_class->key_press_event = gnome_dialog_key_pressed;
	* gnome-dialog.c (gnome_dialog_init): Create accelerator table.
	* gnome-dialog.c (gnome_dialog_button_clicked): Use 
	gnome_dialog_closed() to self destruct.
	* gnome-dialog.c (gnome_dialog_destroy): Unref accelerator table.

Thu Apr 30 21:31:43 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-client.c (client_parse_func): Set previous_id for client.

1998-04-30  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtkcalendar.c: return meaningful values from most routines.  

Thu Apr 30 11:45:38 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-app-helper.c (gnome_app_create_menus_custom,
	gnome_app_do_toolbar_creation): if GnomeApp gets a new accelerator
	table, add it to the window.
